VisualHostKey is cool.

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,5 +1,7 @@
-Host        serverus
-User        mike
-IdentityFile    ~/.ssh/id_rsa
-HostName    198.74.58.231 
-Port        43221 
+VisualHostKey=yes
+
+Host          serverus
+User          mike
+IdentityFile  ~/.ssh/id_rsa
+HostName      198.74.58.231
+Port          43221
