--- a/.ssh/config
+++ b/.ssh/config
@@ -5,3 +5,9 @@ User          mike
 IdentityFile  ~/.ssh/id_rsa
 HostName      198.74.58.231
 Port          43221
+
+Host          github.com
+User          mike
+IdentityFile  ~/.ssh/github
+HostName      github.com
+Port          22
