--- a/.ssh/config
+++ b/.ssh/config
@@ -2,12 +2,18 @@ VisualHostKey=yes
 
 Host          serverus
 User          mike
-IdentityFile  ~/.ssh/id_rsa
+IdentityFile  ~/.ssh/serverus
 HostName      198.74.58.231
 Port          43221
 
 Host          github.com
-User          mike
+User          git
 IdentityFile  ~/.ssh/github
 HostName      github.com
+Port          22
+
+Host          idqa
+User          manderson
+IdentityFile  ~/.ssh/infinity
+HostName      50.56.34.133
 Port          22
