Add global ignore file; globally ignore .DS_Store.

--- a/.gitconfig
+++ b/.gitconfig
@@ -70,6 +70,7 @@
     default = tracking
 [core]
     autocrlf = input
+	excludesfile = /Users/manderson/.gitignore_global
 [color]
     ui = true
 [color "status"]
