Get ssh-agent and tmux playing nicely.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ set-option -g prefix C-z
 set-option -g set-titles on
 set-option -g status-left '#h:'
 set-option -g terminal-overrides 'rxvt-unicode*:sitm@,ritm@'
+set-option -g update-environment 'SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION'
 
 bind z   send-keys C-z
 bind C-z last-window
