Use reattach-to-user-namespace to get OS X clipboard integration with tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,9 @@ set-option -g status-left '#h:'
 set-option -g terminal-overrides 'rxvt-unicode*:sitm@,ritm@'
 set-option -g update-environment 'SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION'
 
+# Reattach to user namespace so that clipboard integration with OS X works.
+set-option -g default-command 'reattach-to-user-namespace -l zsh'
+
 bind z   send-keys C-z
 bind C-z last-window
 bind `   select-window -t 0
