Don't assume a username for the global ignores.

--- a/.gitconfig
+++ b/.gitconfig
@@ -70,7 +70,7 @@
     default = tracking
 [core]
     autocrlf = input
-	excludesfile = /Users/manderson/.gitignore_global
+    excludesfile = ~/.gitignore_global
 [color]
     ui = true
 [color "status"]
