Went crazy on .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,53 @@
-set-window-option -g mode-keys vi
-set-window-option -g status-keys emacs
-set-window-option -g alternate-screen off
-set-option -g default-terminal "screen-256color"
-set-option -g prefix C-z
-set-option -g set-titles on
-set-option -g status-left '#h:'
-set-option -g terminal-overrides 'rxvt-unicode*:sitm@,ritm@'
-set-option -g update-environment 'SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION'
-
 # Reattach to user namespace so that clipboard integration with OS X works.
-set-option -g default-command 'reattach-to-user-namespace -l zsh'
+set -g default-command 'reattach-to-user-namespace -l zsh'
 
-bind z   send-keys C-z
+#set-window-option -g alternate-screen off
+set -g terminal-overrides 'rxvt-unicode*:sitm@,ritm@,xterm*:smcup@:rmcup@'
+set -g update-environment 'SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION'
+
+# Reload key
+bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded..."
+
+# Don't use Ctrl-B if you don't want to hate life
+unbind C-b
+set -g prefix C-z
+
 bind C-z last-window
-bind `   select-window -t 0
+bind z   send-keys C-z
+
+# UTF-8
+set-option -g status-utf8 on
+
+# Supposed to fix pausing in Vim
+set-option -sg escape-time 1
+
+# Get mousey
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+
+# Act more like Vim
+# This is always a good thing, right?
+set-window-option -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# panes
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r H resize-pane -L 5
+bind-key -r L resize-pane -R 5
+
+# Look good
+set -g default-terminal "screen-256color"
+
+# Don't automatically rename windows
+# This doesn't seem to work, though...
+setw -g automatic-rename off
+
+# Colors
+set -g status-bg colour0
+set -g status-fg colour4
