Set the right statusline to show battery

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,3 +51,6 @@ setw -g automatic-rename off
 # Colors
 set -g status-bg colour0
 set -g status-fg colour2
+
+set -g status-right "#(pmset -g batt | awk 'NR==2 {gsub(/;/,\"\"\\); \
+  print (match($3,/^ch/\\) ? \"\ \":\"\"\\) $2}') | %d %h | %H:%M "
