--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -293,6 +293,10 @@
 	<true/>
 	<key>MaxVertically</key>
 	<false/>
+	<key>NSColorPanelMode</key>
+	<string>3</string>
+	<key>NSColorPickerSlidersDefaults</key>
+	<string>3</string>
 	<key>NSNavLastRootDirectory</key>
 	<string>~/git/dotfiles</string>
 	<key>NSQuotedKeystrokeBinding</key>
@@ -301,14 +305,31 @@
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
-	<key>NSWindow Frame NSFontPanel</key>
-	<string>2048 77 445 270 0 0 2560 1418 </string>
+	<key>NSToolbar Configuration Terminal Toolbar</key>
+	<dict>
+		<key>TB Display Mode</key>
+		<integer>1</integer>
+		<key>TB Icon Size Mode</key>
+		<integer>1</integer>
+		<key>TB Is Shown</key>
+		<integer>0</integer>
+		<key>TB Size Mode</key>
+		<integer>1</integer>
+	</dict>
+	<key>NSWindow Frame NSColorPanel</key>
+	<string>1139 71 409 539 0 0 1920 1178 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>1523 790 924 485 0 0 2560 1440 </string>
+	<string>375 533 924 485 0 0 1920 1200 </string>
+	<key>NSWindow Frame SUStatusFrame</key>
+	<string>1056 942 384 129 0 0 1920 1178 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 992 585 426 0 0 2560 1440 </string>
+	<string>0 0 1920 1200 0 0 1920 1178 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>398 168 585 401 0 0 2560 1418 </string>
+	<string>0 767 570 401 0 0 1920 1178 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>296 43 570 401 0 0 1920 1200 </string>
+	<key>NSWindow Frame iTerm Window 3</key>
+	<string>965 8 955 1170 0 0 1920 1178 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -321,146 +342,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19370138645172119</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.15575926005840302</real>
+				<real>0.0</real>
 				<key>Red Component</key>
 				<real>0.0</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14145714044570923</real>
+				<real>0.3692990243434906</real>
 				<key>Green Component</key>
-				<real>0.10840655118227005</real>
+				<real>0.35051879286766052</real>
 				<key>Red Component</key>
-				<real>0.81926977634429932</real>
+				<real>0.84132003784179688</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.38298487663269043</real>
+				<real>0.27843138575553894</real>
 				<key>Green Component</key>
-				<real>0.35665956139564514</real>
+				<real>0.58431375026702881</real>
 				<key>Red Component</key>
-				<real>0.27671992778778076</real>
+				<real>0.56078433990478516</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43850564956665039</real>
+				<real>0.30196079611778259</real>
 				<key>Green Component</key>
-				<real>0.40717673301696777</real>
+				<real>0.63529413938522339</real>
 				<key>Red Component</key>
-				<real>0.32436618208885193</real>
+				<real>0.84313726425170898</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.51685798168182373</real>
+				<real>0.45490196347236633</real>
 				<key>Green Component</key>
-				<real>0.50962930917739868</real>
+				<real>0.37254902720451355</real>
 				<key>Red Component</key>
-				<real>0.44058024883270264</real>
+				<real>0.25098040699958801</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.72908437252044678</real>
+				<real>0.46274510025978088</real>
 				<key>Green Component</key>
-				<real>0.33896297216415405</real>
+				<real>0.30588236451148987</real>
 				<key>Red Component</key>
-				<real>0.34798634052276611</real>
+				<real>0.44313725829124451</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56363654136657715</real>
+				<real>0.47058823704719543</real>
 				<key>Green Component</key>
-				<real>0.56485837697982788</real>
+				<real>0.49019607901573181</real>
 				<key>Red Component</key>
-				<real>0.50599193572998047</real>
+				<real>0.30588236451148987</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.86405980587005615</real>
+				<real>0.56905466318130493</real>
 				<key>Green Component</key>
-				<real>0.95794391632080078</real>
+				<real>0.65588676929473877</real>
 				<key>Red Component</key>
-				<real>0.98943418264389038</real>
+				<real>0.70354700088500977</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.020208755508065224</real>
+				<real>0.23135186731815338</real>
 				<key>Green Component</key>
-				<real>0.54115492105484009</real>
+				<real>0.69934463500976562</real>
 				<key>Red Component</key>
-				<real>0.44977453351020813</real>
+				<real>0.63891607522964478</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.023484811186790466</real>
+				<real>0.26022228598594666</real>
 				<key>Green Component</key>
-				<real>0.46751424670219421</real>
+				<real>0.64705896377563477</real>
 				<key>Red Component</key>
-				<real>0.64746475219726562</real>
+				<real>0.89371055364608765</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.78231418132781982</real>
+				<real>0.70502609014511108</real>
 				<key>Green Component</key>
-				<real>0.46265947818756104</real>
+				<real>0.5013270378112793</real>
 				<key>Red Component</key>
-				<real>0.12754884362220764</real>
+				<real>0.30749374628067017</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43516635894775391</real>
+				<real>0.66419273614883423</real>
 				<key>Green Component</key>
-				<real>0.10802463442087173</real>
+				<real>0.42501714825630188</real>
 				<key>Red Component</key>
-				<real>0.77738940715789795</real>
+				<real>0.60072386264801025</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.52502274513244629</real>
+				<real>0.59364777803421021</real>
 				<key>Green Component</key>
-				<real>0.57082360982894897</real>
+				<real>0.66284120082855225</real>
 				<key>Red Component</key>
-				<real>0.14679534733295441</real>
+				<real>0.29064556956291199</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.79781103134155273</real>
+				<real>0.57579571008682251</real>
 				<key>Green Component</key>
-				<real>0.89001238346099854</real>
+				<real>0.58597689867019653</real>
 				<key>Red Component</key>
-				<real>0.91611063480377197</real>
+				<real>0.57327061891555786</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.15170273184776306</real>
+				<real>0.39880451560020447</real>
 				<key>Green Component</key>
-				<real>0.11783610284328461</real>
+				<real>0.39888995885848999</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.39882731437683105</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.073530435562133789</real>
+				<real>0.20764562487602234</real>
 				<key>Green Component</key>
-				<real>0.21325300633907318</real>
+				<real>0.19900393486022949</real>
 				<key>Red Component</key>
-				<real>0.74176257848739624</real>
+				<real>0.73297864198684692</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -469,11 +490,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.15170273184776306</real>
+				<real>0.10461657494306564</real>
 				<key>Green Component</key>
-				<real>0.11783610284328461</real>
+				<real>0.096812307834625244</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.085404559969902039</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -492,11 +513,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56363654136657715</real>
+				<real>0.77829915285110474</real>
 				<key>Green Component</key>
-				<real>0.56485837697982788</real>
+				<real>0.78391265869140625</real>
 				<key>Red Component</key>
-				<real>0.50599193572998047</real>
+				<real>0.77043700218200684</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -509,18 +530,18 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.51685798168182373</real>
+				<real>0.9843137264251709</real>
 				<key>Green Component</key>
-				<real>0.50962930917739868</real>
+				<real>0.74117648601531982</real>
 				<key>Red Component</key>
-				<real>0.44058024883270264</real>
+				<real>0.11372549086809158</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19370138645172119</real>
+				<real>0.84824216365814209</real>
 				<key>Green Component</key>
-				<real>0.15575926005840302</real>
+				<real>6.9568173785228282e-05</real>
 				<key>Red Component</key>
 				<real>0.0</real>
 			</dict>
@@ -543,11 +564,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.51685798168182373</real>
+				<real>0.56862747669219971</real>
 				<key>Green Component</key>
-				<real>0.50962930917739868</real>
+				<real>0.65490198135375977</real>
 				<key>Red Component</key>
-				<real>0.44058024883270264</real>
+				<real>0.69019609689712524</real>
 			</dict>
 			<key>Guid</key>
 			<string>951BE8C3-39A9-4BF3-9E9E-A63C76A197AF</string>
@@ -865,7 +886,7 @@
 			<key>Name</key>
 			<string>Default</string>
 			<key>Non Ascii Font</key>
-			<string>InconsolataForPowerline-dz 11</string>
+			<string>Monaco 10</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
@@ -889,20 +910,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56363654136657715</real>
+				<real>0.77829915285110474</real>
 				<key>Green Component</key>
-				<real>0.56485837697982788</real>
+				<real>0.78391265869140625</real>
 				<key>Red Component</key>
-				<real>0.50599193572998047</real>
+				<real>0.77043700218200684</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19370138645172119</real>
+				<real>0.25529965758323669</real>
 				<key>Green Component</key>
-				<real>0.15575926005840302</real>
+				<real>0.23136429488658905</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.2163858562707901</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -1090,7 +1111,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/mike.anderson/git/dotfiles</string>
+	<string>/Users/mike/git/dotfiles</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -1108,7 +1129,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2013-09-05T14:58:46Z</date>
+	<date>2013-09-05T02:41:51Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
