--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,12 @@ bind-key -r K resize-pane -U 5
 bind-key -r H resize-pane -L 5
 bind-key -r L resize-pane -R 5
 
+# splitting
+unbind %
+bind H split-window -h
+unbind '"'
+bind V split-window -v
+
 # Look good
 set -g default-terminal "screen-256color"
 
