.tmux.conf: move status bar to top, change colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,8 +55,10 @@ set -g default-terminal "screen-256color"
 setw -g automatic-rename off
 
 # Colors
-set -g status-bg colour0
-set -g status-fg colour2
+set -g status-bg colour7
+set -g status-fg colour0
+
+set-option -g status-position top
 
 set -g status-right "#(pmset -g batt | awk 'NR==2 {gsub(/;/,\"\"\\); \
   print (match($3,/^ch/\\) ? \"\ \":\"\"\\) $2}') | %d %h | %H:%M "
