Resize-pane and split binding changes, new-session

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,14 +38,17 @@ bind l select-pane -R
 # panes
 bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
-bind-key -r H resize-pane -L 5
-bind-key -r L resize-pane -R 5
+bind-key -r U resize-pane -L 5
+bind-key -r I resize-pane -R 5
 
 # splitting
 unbind %
-bind H split-window -h
+bind V split-window -h
 unbind '"'
-bind V split-window -v
+bind H split-window -v
+
+# Start a new session
+bind N new-session
 
 # Look good
 set -g default-terminal "screen-256color"
