--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -263,6 +263,8 @@
 	<false/>
 	<key>HideActivityIndicator</key>
 	<false/>
+	<key>HideMenuBarInFullscreen</key>
+	<true/>
 	<key>HideScrollbar</key>
 	<false/>
 	<key>HideTab</key>
@@ -297,43 +299,51 @@
 	<string>3</string>
 	<key>NSColorPickerSlidersDefaults</key>
 	<string>3</string>
+	<key>NSFontPanelAttributes</key>
+	<string>1, 0</string>
+	<key>NSFontPanelPreviewHeight</key>
+	<real>79</real>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/git/dotfiles</string>
-	<key>NSNavPanelExpandedStateForSaveMode</key>
-	<true/>
+	<string>~/Pictures</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
-	<key>NSToolbar Configuration Terminal Toolbar</key>
-	<dict>
-		<key>TB Display Mode</key>
-		<integer>1</integer>
-		<key>TB Icon Size Mode</key>
-		<integer>1</integer>
-		<key>TB Is Shown</key>
-		<integer>0</integer>
-		<key>TB Size Mode</key>
-		<integer>1</integer>
-	</dict>
+	<key>NSTableView Columns KeyBingingTable</key>
+	<array>
+		<data>
+		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
+		hAErATCG
+		</data>
+		<string>198</string>
+		<data>
+		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
+		hAErATGG
+		</data>
+		<string>302</string>
+	</array>
+	<key>NSTableView Hidden Columns KeyBingingTable</key>
+	<array/>
+	<key>NSTableView Sort Ordering KeyBingingTable</key>
+	<array/>
 	<key>NSWindow Frame NSColorPanel</key>
-	<string>1139 71 409 539 0 0 1920 1178 </string>
+	<string>405 427 201 309 0 0 1440 878 </string>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>1097 197 445 270 0 0 1920 1178 </string>
+	<string>17 72 445 270 0 0 1440 900 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>770 556 924 485 0 0 1920 1178 </string>
+	<string>91 393 924 485 0 0 1440 878 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
-	<string>1056 942 384 129 0 0 1920 1178 </string>
+	<string>528 562 384 129 0 0 1440 878 </string>
+	<key>NSWindow Frame SUUpdateAlertFrame</key>
+	<string>432 365 575 392 0 0 1440 878 </string>
+	<key>NSWindow Frame com.apple.typography_panel_Inconsolata-dz</key>
+	<string>398 646 260 42 0 0 1440 900 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 0 1920 1200 0 0 1920 1178 </string>
+	<string>-717 401 570 477 -1050 0 1050 1658 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>619 443 570 426 0 0 1920 1178 </string>
-	<key>NSWindow Frame iTerm Window 2</key>
-	<string>296 43 570 401 0 0 1920 1200 </string>
-	<key>NSWindow Frame iTerm Window 3</key>
-	<string>965 8 955 1170 0 0 1920 1178 </string>
+	<string>506 268 650 452 0 0 1440 878 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -347,6 +357,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.10367143154144287</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.10366787016391754</real>
 				<key>Red Component</key>
@@ -356,6 +368,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.3692990243434906</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.35051879286766052</real>
 				<key>Red Component</key>
@@ -365,6 +379,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.27843138575553894</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.58431375026702881</real>
 				<key>Red Component</key>
@@ -374,6 +390,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.2569502592086792</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.59534919261932373</real>
 				<key>Red Component</key>
@@ -383,6 +401,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.63428622484207153</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.51739192008972168</real>
 				<key>Red Component</key>
@@ -392,6 +412,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.46274510025978088</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.30588236451148987</real>
 				<key>Red Component</key>
@@ -401,6 +423,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.47058823704719543</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.49019607901573181</real>
 				<key>Red Component</key>
@@ -410,6 +434,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.74239206314086914</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.81106525659561157</real>
 				<key>Red Component</key>
@@ -419,6 +445,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.237378790974617</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.79182702302932739</real>
 				<key>Red Component</key>
@@ -428,6 +456,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.26781275868415833</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.65344744920730591</real>
 				<key>Red Component</key>
@@ -437,6 +467,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.83257460594177246</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.63489770889282227</real>
 				<key>Red Component</key>
@@ -446,6 +478,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.66419273614883423</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.42501714825630188</real>
 				<key>Red Component</key>
@@ -454,16 +488,20 @@
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.7031024694442749</real>
+				<real>0.59364777803421021</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.79641163349151611</real>
+				<real>0.66284120082855225</real>
 				<key>Red Component</key>
-				<real>0.38259899616241455</real>
+				<real>0.29064556956291199</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
 				<real>0.57579571008682251</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.58597689867019653</real>
 				<key>Red Component</key>
@@ -473,6 +511,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.39601233601570129</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.39600560069084167</real>
 				<key>Red Component</key>
@@ -482,19 +522,25 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.20764562487602234</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.19900393486022949</real>
 				<key>Red Component</key>
 				<real>0.73297864198684692</real>
 			</dict>
+			<key>Application Keypad Allowed</key>
+			<integer>0</integer>
 			<key>Automatically Log</key>
 			<false/>
 			<key>BM Growl</key>
-			<true/>
+			<false/>
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
 				<real>0.14267949759960175</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.14267441630363464</real>
 				<key>Red Component</key>
@@ -518,6 +564,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.77829915285110474</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.78391265869140625</real>
 				<key>Red Component</key>
@@ -535,6 +583,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.9843137264251709</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.74117648601531982</real>
 				<key>Red Component</key>
@@ -544,6 +594,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.84824216365814209</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>6.9568173785228282e-05</real>
 				<key>Red Component</key>
@@ -569,6 +621,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.81501609086990356</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.86580991744995117</real>
 				<key>Red Component</key>
@@ -579,7 +633,7 @@
 			<key>Hide After Opening</key>
 			<false/>
 			<key>Horizontal Spacing</key>
-			<real>1</real>
+			<real>0.89999997615814209</real>
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Initial Text</key>
@@ -897,6 +951,8 @@
 			<string>Inconsolata-dz 11</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
+			<key>Prevent Opening in a Tab</key>
+			<false/>
 			<key>Prompt Before Closing 2</key>
 			<integer>0</integer>
 			<key>Right Option Key Sends</key>
@@ -915,6 +971,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.77829915285110474</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.78391265869140625</real>
 				<key>Red Component</key>
@@ -924,6 +982,8 @@
 			<dict>
 				<key>Blue Component</key>
 				<real>0.25529965758323669</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
 				<real>0.23136429488658905</real>
 				<key>Red Component</key>
@@ -1058,9 +1118,11 @@
 			<key>Use Canonical Parser</key>
 			<false/>
 			<key>Use Italic Font</key>
-			<false/>
+			<true/>
+			<key>Use Non-ASCII Font</key>
+			<true/>
 			<key>Vertical Spacing</key>
-			<real>1</real>
+			<real>1.0770692825317383</real>
 			<key>Visual Bell</key>
 			<true/>
 			<key>Window Type</key>
@@ -1077,6 +1139,8 @@
 	<false/>
 	<key>OpenTmuxWindowsIn</key>
 	<integer>0</integer>
+	<key>OptionClickMovesCursor</key>
+	<true/>
 	<key>PassOnControlClick</key>
 	<false/>
 	<key>PasteFromClipboard</key>
@@ -1129,11 +1193,11 @@
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedURL</key>
-	<string>http://iterm2.com/appcasts/testing.xml</string>
+	<string>http://iterm2.com/appcasts/nightly.xml</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2013-09-18T23:56:29Z</date>
+	<date>2014-01-03T17:58:37Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1163,18 +1227,22 @@
 	<key>UseCompactLabel</key>
 	<true/>
 	<key>UseLionStyleFullscreen</key>
-	<false/>
+	<true/>
 	<key>WebKitDefaultFontSize</key>
 	<integer>11</integer>
 	<key>WebKitStandardFont</key>
-	<string>Lucida Grande</string>
+	<string>.Lucida Grande UI</string>
 	<key>WindowNumber</key>
 	<true/>
 	<key>WindowStyle</key>
 	<integer>0</integer>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
+	<key>findIgnoreCase_iTerm</key>
+	<true/>
+	<key>findRegex_iTerm</key>
+	<false/>
 	<key>iTerm Version</key>
-	<string>1.0.0.20130624</string>
+	<string>1.0.0.20140102-nightly</string>
 </dict>
 </plist>
