--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -566,7 +566,7 @@
 	<key>NSFontPanelPreviewHeight</key>
 	<real>79</real>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/git/dotfiles/iterm</string>
+	<string>~/dotfiles</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
@@ -595,7 +595,7 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>307 259 445 270 0 0 1440 878 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>486 342 924 485 0 0 1440 878 </string>
+	<string>21 306 924 485 0 0 1440 900 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>528 562 384 129 0 0 1440 878 </string>
 	<key>NSWindow Frame SUUpdateAlertFrame</key>
@@ -603,9 +603,9 @@
 	<key>NSWindow Frame com.apple.typography_panel_Inconsolata-dz</key>
 	<string>398 646 260 42 0 0 1440 900 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 11 717 867 0 0 1440 878 </string>
+	<string>0 351 570 527 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>0 345 570 527 0 0 1440 878 </string>
+	<string>723 351 570 527 0 0 1440 878 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -613,6 +613,8 @@
 			<true/>
 			<key>Allow Title Reporting</key>
 			<false/>
+			<key>Allow Title Setting</key>
+			<true/>
 			<key>Ambiguous Double Width</key>
 			<false/>
 			<key>Ansi 0 Color</key>
@@ -1363,6 +1365,17 @@
 			</array>
 			<key>Sync Title</key>
 			<false/>
+			<key>Tab Color</key>
+			<dict>
+				<key>Blue Component</key>
+				<real>0.0</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
+				<key>Green Component</key>
+				<real>0.0</real>
+				<key>Red Component</key>
+				<real>0.0</real>
+			</dict>
 			<key>Tags</key>
 			<array/>
 			<key>Terminal Type</key>
@@ -1377,11 +1390,11 @@
 			<true/>
 			<key>Use Bright Bold</key>
 			<false/>
-			<key>Use Canonical Parser</key>
-			<true/>
 			<key>Use Italic Font</key>
 			<true/>
 			<key>Use Non-ASCII Font</key>
+			<false/>
+			<key>Use Tab Color</key>
 			<false/>
 			<key>Vertical Spacing</key>
 			<real>1.0770692825317383</real>
@@ -1441,7 +1454,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>~/git/dotfiles/iterm</string>
+	<string>~/dotfiles/iterm</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -1459,7 +1472,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-02-05T03:40:35Z</date>
+	<date>2014-03-27T14:54:20Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1505,6 +1518,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>1.0.0.20140204-nightly</string>
+	<string>1.0.0.20140326-nightly</string>
 </dict>
 </plist>
