--- a/rcm/tmux.conf
+++ b/rcm/tmux.conf
@@ -1,65 +1,56 @@
 # Reattach to user namespace so that clipboard integration with OS X works.
 set -g default-command 'reattach-to-user-namespace -l zsh'
 
-#set-window-option -g alternate-screen off
+set-window-option -g alternate-screen off
 set -g terminal-overrides 'rxvt-unicode*:sitm@,ritm@,xterm*:smcup@:rmcup@'
 set -g update-environment 'SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION'
 
-# Reload key
+# Reload ~/tmux.conf.
 bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded..."
 
-# Don't use Ctrl-B if you don't want to hate life
+# Use <c-z> instead of <c-b>.
 unbind C-b
 set -g prefix C-z
 
 bind C-z last-window
 bind z   send-keys C-z
 
-# UTF-8
+# Use UTF-8.
 set-option -g status-utf8 on
 
-# Supposed to fix pausing in Vim
+# Supposed to fix pausing in Vim.
 set-option -sg escape-time 1
 
-# Get mousey
+# Don't automatically rename windows.
+setw -g automatic-rename off
+
+set -g history-limit 10000
+
+# Get mousey.
 setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
 
-# Act more like Vim
-# This is always a good thing, right?
+# Act more like Vim.
 set-window-option -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# panes
-bind-key -r J resize-pane -D 5
-bind-key -r K resize-pane -U 5
-bind-key -r U resize-pane -L 5
-bind-key -r I resize-pane -R 5
-
-# splitting
+# Shortcuts for splitting panes.
 unbind %
 bind V split-window -h
 unbind '"'
 bind H split-window -v
 
-# Start a new session
-bind N new-session
-
-# Look good
+# Look good.
 set -g default-terminal "screen-256color"
 
-# Don't automatically rename windows
-# This doesn't seem to work, though...
-setw -g automatic-rename off
-
-# Colors
-set -g status-bg colour7
-set -g status-fg colour0
+# Status bar.
+set -g status-bg colour13
+set -g status-fg colour232
 
 set-option -g status-position top
 
